# robotframework-devicelibrary

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
DeviceLibrary/: DeviceLibrary.py  __init__.py  _version.py
docs/: DeviceLibrary.html  DeviceLibrary.rst
tests/acceptance/: Docker.robot  SSH.robot  apt.robot  assert_filesystem.robot  common.resource  execute_command.robot  logs.robot  processes.robot  processes_kill.robot  random_name.robot  services.robot  setup.robot  time.robot
tests/acceptance/compose/: compose.robot  docker-compose.yaml
tests/acceptance/docker/: docker.robot  docker_network.robot
tests/acceptance/services/: helloworld.service
tests/acceptance/transfer_to_device/: transfer_to_device.robot
tests/images/debian-systemd/: Dockerfile
tests/integration/: test_device_library.py
