[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "DeviceLibrary/_version.py"

[project]
name = "robotframework-devicelibrary"
description = "Robot Framework library for interfacing with Devices"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["testing"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "robotframework >= 6.0.0, < 8.0.0",
  "unidecode >= 1.3.6, < 2.0.0",
  "device-test-core @ git+https://github.com/reubenmiller/device-test-core.git@f6110065b6dc5ac4850dc5dc6c04aedf42b9c6ee",
]

[project.optional-dependencies]
all = [
    "robotframework-devicelibrary[ssh]",
    "robotframework-devicelibrary[docker]",
    "robotframework-devicelibrary[local]",
]
ssh = [
    "device-test-core[ssh] @ git+https://github.com/reubenmiller/device-test-core.git@f6110065b6dc5ac4850dc5dc6c04aedf42b9c6ee",
]
local = [
    "device-test-core[local] @ git+https://github.com/reubenmiller/device-test-core.git@f6110065b6dc5ac4850dc5dc6c04aedf42b9c6ee",
]
docker = [
    "device-test-core[docker] @ git+https://github.com/reubenmiller/device-test-core.git@f6110065b6dc5ac4850dc5dc6c04aedf42b9c6ee",
]

test = [
    "pytest >= 7.2.0, < 8.0.0",
]
