[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "DeviceLibrary/_version.py"

[project]
name = "robotframework-devicelibrary"
description = "Robot Framework library for interfacing with Devices"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["testing"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "robotframework >= 6.0.0, < 8.0.0",
  "unidecode >= 1.3.6, < 2.0.0",
  "device-test-core @ git+https://github.com/reubenmiller/device-test-core.git@e67ccf13aa5c810a3d4a59c265e05aa2a614f163",
]

[project.optional-dependencies]
all = [
    "robotframework-devicelibrary[ssh]",
    "robotframework-devicelibrary[docker]",
    "robotframework-devicelibrary[local]",
]
ssh = [
    "device-test-core[ssh] @ git+https://github.com/reubenmiller/device-test-core.git@e67ccf13aa5c810a3d4a59c265e05aa2a614f163",
]
local = [
    "device-test-core[local] @ git+https://github.com/reubenmiller/device-test-core.git@e67ccf13aa5c810a3d4a59c265e05aa2a614f163",
]
docker = [
    "device-test-core[docker] @ git+https://github.com/reubenmiller/device-test-core.git@e67ccf13aa5c810a3d4a59c265e05aa2a614f163",
]

test = [
    "pytest >= 7.2.0, < 8.0.0",
]
