[build-system]
requires = [
    "setuptools>=75",
    "wheel>=0.43.0",
    "setuptools-scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "DeviceLibrary/_version.py"

[project]
name = "robotframework-devicelibrary"
description = "Robot Framework library for interfacing with Devices"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["testing"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "robotframework >= 6.0.0, < 8.0.0",
  "unidecode >= 1.4.0, < 2.0.0",
  "device-test-core @ git+https://github.com/reubenmiller/device-test-core.git@1.15.0",
]

[project.optional-dependencies]
all = [
    "robotframework-devicelibrary[ssh]",
    "robotframework-devicelibrary[docker]",
    "robotframework-devicelibrary[local]",
]
ssh = [
    "device-test-core[ssh] @ git+https://github.com/reubenmiller/device-test-core.git@1.15.0",
]
local = [
    "device-test-core[local] @ git+https://github.com/reubenmiller/device-test-core.git@1.15.0",
]
docker = [
    "device-test-core[docker] @ git+https://github.com/reubenmiller/device-test-core.git@1.15.0",
]

test = [
    "pytest >= 7.2.0, < 8.0.0",
]
